[tool.poetry]
name = "at"
version = "0.1.0"
description = "Airtable API"
authors = ["Stefan Wong <stfnwong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pyairtable = "^1.4.0"
dash = "^2.8.0"
pandas = "^1.5.3"
plotly = "^5.13.0"

[tool.poetry.dev-dependencies]
pudb = "^2022.1.3"
ipython = "^8.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
